--- a/app/src/main/res/layout/fragment_detalle_arma.xml
+++ b/app/src/main/res/layout/fragment_detalle_arma.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/tvNombre_DArma"
-        android:layout_width="wrap_content"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:text="[nombre]"
         android:textAlignment="center"
@@ -56,14 +56,32 @@
         app:layout_constraintStart_toEndOf="@+id/textCategoria" />
 
     <TextView
+        android:id="@+id/textRareza"
+        android:layout_width="85dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Rareza: "
+        android:textAlignment="textEnd"
+        app:layout_constraintStart_toStartOf="@+id/textCategoria"
+        app:layout_constraintTop_toBottomOf="@+id/textCategoria" />
+
+    <TextView
+        android:id="@+id/tvRareza_DArma"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="[rareza]"
+        app:layout_constraintBottom_toBottomOf="@+id/textRareza"
+        app:layout_constraintStart_toEndOf="@+id/textRareza" />
+
+    <TextView
         android:id="@+id/textDanio"
         android:layout_width="85dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Daño: "
         android:textAlignment="textEnd"
-        app:layout_constraintStart_toStartOf="@+id/textCategoria"
-        app:layout_constraintTop_toBottomOf="@+id/textCategoria" />
+        app:layout_constraintStart_toStartOf="@+id/textRareza"
+        app:layout_constraintTop_toBottomOf="@+id/textRareza" />
 
     <TextView
         android:id="@+id/tvDanio_DArma"
@@ -91,23 +109,15 @@
         app:layout_constraintBottom_toBottomOf="@+id/textBono"
         app:layout_constraintStart_toEndOf="@+id/textBono" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="195dp" />
-
     <TextView
         android:id="@+id/textAtk"
         android:layout_width="85dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="Bono ATK: "
         android:textAlignment="textEnd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintStart_toStartOf="@+id/textBono"
+        app:layout_constraintTop_toBottomOf="@+id/textBono" />
 
     <TextView
         android:id="@+id/tvAtk_DArma"
@@ -219,11 +229,10 @@
         android:layout_width="125dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
         android:text="Modificador ATK: "
         android:textAlignment="textEnd"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
+        app:layout_constraintBottom_toBottomOf="@+id/textAtk"
+        app:layout_constraintStart_toStartOf="@+id/guideline4" />
 
     <TextView
         android:id="@+id/tvModAtk_DArma"
@@ -287,23 +296,15 @@
         app:layout_constraintBottom_toBottomOf="@+id/textModDfm"
         app:layout_constraintStart_toEndOf="@+id/textModDfm" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="420dp" />
-
     <TextView
         android:id="@+id/textPrecio"
         android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="Precio: "
         android:textAlignment="textEnd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
+        app:layout_constraintStart_toStartOf="@+id/textAcc"
+        app:layout_constraintTop_toBottomOf="@+id/textAcc" />
 
     <TextView
         android:id="@+id/tvPrecio_DArma"
@@ -331,22 +332,15 @@
         app:layout_constraintBottom_toBottomOf="@+id/textPeso"
         app:layout_constraintStart_toEndOf="@+id/textPeso" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="505dp" />
-
     <TextView
         android:id="@+id/tvDetalle_DArma"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:text="[descripción]"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline5" />
+        app:layout_constraintTop_toBottomOf="@+id/textPeso" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
