--- a/app/src/main/res/layout/fragment_crear_armadura.xml
+++ b/app/src/main/res/layout/fragment_crear_armadura.xml
@@ -41,14 +41,32 @@
         app:layout_constraintTop_toTopOf="@+id/textNombre" />
 
     <TextView
-        android:id="@+id/textDef"
+        android:id="@+id/textRareza"
         android:layout_width="85dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Bono DEF: "
+        android:layout_marginTop="24dp"
+        android:text="Rareza: "
         android:textAlignment="textEnd"
         app:layout_constraintStart_toStartOf="@+id/textNombre"
         app:layout_constraintTop_toBottomOf="@+id/textNombre" />
+
+    <Spinner
+        android:id="@+id/spRareza_CArmadura"
+        android:layout_width="264dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/textRareza"
+        app:layout_constraintStart_toEndOf="@+id/textRareza"
+        app:layout_constraintTop_toTopOf="@+id/textRareza" />
+
+    <TextView
+        android:id="@+id/textDef"
+        android:layout_width="85dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Bono DEF: "
+        android:textAlignment="textEnd"
+        app:layout_constraintStart_toStartOf="@+id/textRareza"
+        app:layout_constraintTop_toBottomOf="@+id/textRareza" />
 
     <EditText
         android:id="@+id/etBonoDef_CArmadura"
@@ -129,11 +147,10 @@
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
         android:text="Modificador DEF: "
         android:textAlignment="textEnd"
-        app:layout_constraintStart_toEndOf="@+id/etBonoDef_CArmadura"
-        app:layout_constraintTop_toBottomOf="@+id/textNombre" />
+        app:layout_constraintBottom_toBottomOf="@+id/textDef"
+        app:layout_constraintStart_toEndOf="@+id/etBonoDef_CArmadura" />
 
     <EditText
         android:id="@+id/etModDef_CArmadura"
@@ -172,7 +189,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="330dp" />
+        app:layout_constraintGuide_begin="365dp" />
 
     <TextView
         android:id="@+id/textPrecio"
